--- a/VPN-classification-via-classical-methods.ipynb
+++ b/VPN-classification-via-classical-methods.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "id": "352b90c4",
    "metadata": {},
    "outputs": [],
@@ -23,12 +23,12 @@
     "from sklearn.preprocessing import LabelEncoder # Инструмент разметки текстовых данных в таблице\n",
     "from sklearn.model_selection import train_test_split # Инструмент разбивки на тренировочную и тестовую выборки\n",
     "from sklearn.linear_model import LogisticRegression # Алгоритм логистической регрессии\n",
-    "from sklearn.metrics import r2_score # r2-коэффициент"
+    "from sklearn.metrics import confusion_matrix # Матрица ошибок"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "id": "75ad7b10",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "154c7eb1-5f1a-42f2-befc-25f221fef614",
+       "ref": "d281214b-d944-4dba-92c6-fc71af058747",
        "rows": [
         [
          "0",
@@ -331,7 +331,7 @@
        "4  2781012822  1856855904  PSH-ACK      1313   HTTPS      1  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "id": "b561dba2",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "id": "5a1c7275",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "8fb1b25b-18fc-4b9a-83f6-0cc0447b0683",
+       "ref": "fcce1d90-3a2e-4fa5-b1ef-eca2c494887a",
        "rows": [
         [
          "0",
@@ -693,7 +693,7 @@
        "4  2781012822  1856855904     3      1313        1      1  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "id": "6eddb066",
    "metadata": {},
    "outputs": [],
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "id": "32e4ccb5",
    "metadata": {},
    "outputs": [],
@@ -750,7 +750,13 @@
     "model_LR_L1 = LogisticRegression(penalty='l1', random_state=18, solver='saga', max_iter=10**6) # Инициализация модели\n",
     "model_LR_L1.fit(X_train, Y_train) # Обучение модели\n",
     "Y_pred = model_LR_L1.predict(X_test) # Тестирование модели\n",
-    "r2_model_LR_L1 = r2_score(Y_test,Y_pred) # Оценка модели с помощью r2-коэффициента"
+    "cm_model_LR_L1 = confusion_matrix(Y_test,Y_pred) # Оценка модели с помощью матрицы ошибок\n",
+    "#\n",
+    "#Визуализация матрицы ошибок\n",
+    "plt.figure(figsize=(6,6))\n",
+    "sns.heatmap(cm_model_LR_L1, annot=True)\n",
+    "plt.title('Матрица ошибок')\n",
+    "plt.show()"
    ]
   }
  ],
