--- a/VPN-classification-via-classical-methods.ipynb
+++ b/VPN-classification-via-classical-methods.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "352b90c4",
    "metadata": {},
    "outputs": [],
@@ -22,13 +22,13 @@
     "import numpy as np # Библиотека для математических операций\n",
     "from sklearn.preprocessing import LabelEncoder # Инструмент разметки текстовых данных в таблице\n",
     "from sklearn.model_selection import train_test_split # Инструмент разбивки на тренировочную и тестовую выборки\n",
-    "from sklearn.linear_model import LogisticRegression # Алгоритм логистической регрессии\n",
-    "from sklearn.metrics import confusion_matrix # Матрица ошибок"
+    "from sklearn.metrics import confusion_matrix # Матрица ошибок\n",
+    "from sklearn.neighbors import KNeighborsClassifier # Метод KNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "id": "75ad7b10",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "d281214b-d944-4dba-92c6-fc71af058747",
+       "ref": "2a8b78f1-cce9-4616-af10-f5e3cd0dba92",
        "rows": [
         [
          "0",
@@ -331,7 +331,7 @@
        "4  2781012822  1856855904  PSH-ACK      1313   HTTPS      1  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "id": "b561dba2",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "id": "5a1c7275",
    "metadata": {},
    "outputs": [
@@ -470,7 +470,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "fcce1d90-3a2e-4fa5-b1ef-eca2c494887a",
+       "ref": "c1814a0f-fcb0-4cbe-b9a2-372ace86c4c7",
        "rows": [
         [
          "0",
@@ -693,7 +693,7 @@
        "4  2781012822  1856855904     3      1313        1      1  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "id": "6eddb066",
    "metadata": {},
    "outputs": [],
@@ -722,13 +722,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "id": "32e4ccb5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Разбиение на тренировочную и тестовую выборки\n",
-    "X_train, X_test, Y_train, Y_test = train_test_split(X_data, Y_data, train_size=0.33, shuffle=True, random_state=18)"
+    "X_train, X_test, Y_train, Y_test = train_test_split(X_data, Y_data, train_size=0.77, shuffle=True, random_state=18)"
    ]
   },
   {
@@ -736,25 +736,22 @@
    "id": "a0112ed5",
    "metadata": {},
    "source": [
-    "### Обучение и проверка моделей на основе LogisticRegression, KNN, RandomForestTree"
+    "### Обучение и проверка моделей на основе KNN, RandomForestTree и XGBoost"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22adbdde",
+   "id": "b04e30f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Модель на основе LogisticRegression с L1-оптимизацией\n",
-    "model_LR_L1 = LogisticRegression(penalty='l1', random_state=18, solver='saga', max_iter=10**6) # Инициализация модели\n",
-    "model_LR_L1.fit(X_train, Y_train) # Обучение модели\n",
-    "Y_pred = model_LR_L1.predict(X_test) # Тестирование модели\n",
-    "cm_model_LR_L1 = confusion_matrix(Y_test,Y_pred) # Оценка модели с помощью матрицы ошибок\n",
+    "# Обучение и проверка модели на основе KNN\n",
+    "\n",
     "#\n",
     "#Визуализация матрицы ошибок\n",
     "plt.figure(figsize=(6,6))\n",
-    "sns.heatmap(cm_model_LR_L1, annot=True)\n",
+    "sns.heatmap(cm_model_KNN, annot=True)\n",
     "plt.title('Матрица ошибок')\n",
     "plt.show()"
    ]
