--- a/VPN-classification-via-classical-methods.ipynb
+++ b/VPN-classification-via-classical-methods.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 353,
    "id": "352b90c4",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 354,
    "id": "75ad7b10",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "5936e781-c7f9-42d4-913a-3dde20e2781d",
+       "ref": "202344e6-7659-46ed-9995-c408231b04cb",
        "rows": [
         [
          "0",
@@ -334,7 +334,7 @@
        "4  2781012822  1856855904  PSH-ACK      1313   HTTPS      1  "
       ]
      },
-     "execution_count": 270,
+     "execution_count": 354,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 355,
    "id": "b561dba2",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 356,
    "id": "5a1c7275",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "64ea724a-8a2a-4d3b-aca3-59a8285007c0",
+       "ref": "9ea5a838-3328-43ed-a7c0-b1d47cb39130",
        "rows": [
         [
          "0",
@@ -696,7 +696,7 @@
        "4  2781012822  1856855904     3      1313        1      1  "
       ]
      },
-     "execution_count": 272,
+     "execution_count": 356,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 357,
    "id": "6eddb066",
    "metadata": {},
    "outputs": [],
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 358,
    "id": "f5ec9ac8",
    "metadata": {},
    "outputs": [],
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 359,
    "id": "32e4ccb5",
    "metadata": {},
    "outputs": [],
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 360,
    "id": "24cf2683",
    "metadata": {},
    "outputs": [
@@ -778,6 +778,21 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     non-VPN       1.00      1.00      1.00      4582\n",
+      "         VPN       1.00      1.00      1.00      4685\n",
+      "\n",
+      "    accuracy                           1.00      9267\n",
+      "   macro avg       1.00      1.00      1.00      9267\n",
+      "weighted avg       1.00      1.00      1.00      9267\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -794,12 +809,15 @@
     "plt.xlabel('Y_pred')\n",
     "plt.ylabel('Y_test')\n",
     "plt.title('Матрица ошибок')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "#\n",
+    "# Отчет по классификации\n",
+    "print(classification_report(Y_test,Y_pred, target_names=['non-VPN','VPN']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 361,
    "id": "b04e30f5",
    "metadata": {},
    "outputs": [
@@ -821,6 +839,21 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     non-VPN       1.00      1.00      1.00      4582\n",
+      "         VPN       1.00      1.00      1.00      4685\n",
+      "\n",
+      "    accuracy                           1.00      9267\n",
+      "   macro avg       1.00      1.00      1.00      9267\n",
+      "weighted avg       1.00      1.00      1.00      9267\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -837,12 +870,15 @@
     "plt.xlabel('Y_pred')\n",
     "plt.ylabel('Y_test')\n",
     "plt.title('Матрица ошибок')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "#\n",
+    "# Отчет по классификации\n",
+    "print(classification_report(Y_test,Y_pred, target_names=['non-VPN','VPN']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 362,
    "id": "7bdc55ac",
    "metadata": {},
    "outputs": [
@@ -864,6 +900,21 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     non-VPN       1.00      1.00      1.00      4582\n",
+      "         VPN       1.00      1.00      1.00      4685\n",
+      "\n",
+      "    accuracy                           1.00      9267\n",
+      "   macro avg       1.00      1.00      1.00      9267\n",
+      "weighted avg       1.00      1.00      1.00      9267\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -880,7 +931,20 @@
     "plt.xlabel('Y_pred')\n",
     "plt.ylabel('Y_test')\n",
     "plt.title('Матрица ошибок')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "#\n",
+    "# Отчет по классификации\n",
+    "print(classification_report(Y_test,Y_pred, target_names=['non-VPN','VPN']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0cb46a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Обучение и проверка модели на основе XGBoost\n"
    ]
   }
  ],
