--- a/VPN-classification-via-classical-methods.ipynb
+++ b/VPN-classification-via-classical-methods.ipynb
@@ -751,7 +751,7 @@
    "id": "a0112ed5",
    "metadata": {},
    "source": [
-    "### Обучение и проверка моделей на основе LogisticRegression, KNN, RandomForestTree и XGBoost"
+    "### Обучение и проверка моделей на основе LogisticRegression, KNN, RandomForestTree и GradientBoosting"
    ]
   },
   {
